--- a/package.json
+++ b/package.json
@@ -11,8 +11,15 @@
   },
   "dependencies": {
     "framer-motion": "^10.12.4",
+    "normalize.css": "^8.0.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-particles-js": "^3.6.0",
+    "react-router-dom": "^6.10.0",
+    "react-scripts": "^5.0.1",
+    "styled-components": "^5.3.10",
+    "tsparticles": "^2.9.3",
+    "web-vitals": "^3.3.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
