--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-scripts": "^5.0.1",
     "styled-components": "^5.3.10",
     "tsparticles": "^2.9.3",
+    "typescript": "^4.9.5",
     "web-vitals": "^3.3.1"
   },
   "devDependencies": {
