--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router": "^6.10.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "^5.0.1",
+    "react-tsparticles": "^2.9.3",
     "styled-components": "^5.3.10",
     "tsparticles": "^2.9.3",
     "typescript": "^4.9.5",
